--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,14 @@
     <string name="title_graph">Graph</string>
     <string name="title_settings">Settings</string>
     <string name="add">Add</string>
+
+    <string-array name="spinner">
+        <item>오늘</item>
+        <item>어제</item>
+        <item>지난 7일</item>
+        <item>이번 달</item>
+        <item>최근 30일</item>
+        <item>지난 달</item>
+        <item>맞춤설정</item>
+    </string-array>
 </resources>
